--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,5 +54,5 @@ jobs:
 
       - name: Deploy to k8s
         run: |
-          helm upgrade --install actions-test oci://${{ env.REGISTRY }}/${{ github.repository_owner }}/charts/actions-test --version 0.1.0 --kube-context cicdcluster --namespace cicd --create-namespace --insecure-skip-tls-verify
+          helm upgrade --install actions-test oci://${{ env.REGISTRY }}/${{ github.repository_owner }}/charts/actions-test --version 0.1.0 --kubeconfig ${{ secrets.KUBE_CONFIG }} --kube-context cicdcluster --namespace cicd --create-namespace --insecure-skip-tls-verify
 
