--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,15 +13,12 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     permissions:
-#      contents: read
-#      pages: write
       id-token: write
 #    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: Install helm
         uses: azure/setup-helm@v3
         with:
-          # version: '<version>' # default is latest (stable)
           token: ${{ secrets.REGISTRY_TOKEN }}
 
       - name: Checkout source code
@@ -29,9 +26,6 @@ jobs:
 
       - name: Package helm chart
         run: helm package chart
-
-#      - name: Login to registry
-#        run: helm registry login ${{ env.REGISTRY }}/${{ github.repository_owner }} -u ${{ github.repository_owner }} -p ${{ secrets.REGISTRY_TOKEN }}
 
       - name: Log in to the Container registry
         uses: docker/login-action@v3.3.0
@@ -42,21 +36,6 @@ jobs:
 
       - name: Push chart to registry
         run: helm push ./actions-test-0.1.0.tgz oci://${{ env.REGISTRY }}/${{ github.repository_owner }}/charts
-
-#      - name: Install kubectl
-#        uses: azure/setup-kubectl@v4.0.0
-##        with:
-##          version: 'v4.0.0' # default is latest stable
-#
-#      - name: Create kube config
-#        uses: azure/k8s-set-context@v3
-#        with:
-#          method: kubeconfig
-#          kubeconfig: ${{ secrets.KUBE_CONFIG }}
-
-#      # Set up the kubeconfig from the secret
-#      - name: Set up kubeconfig
-#        run: echo "${{ secrets.KUBE_CONFIG }}" | base64 -d > ./kube_config
 
       # Log in to Azure using OIDC
       - name: Azure Login
@@ -73,5 +52,5 @@ jobs:
 
       - name: Deploy to k8s
         run: |
-          helm upgrade --install actions-test oci://${{ env.REGISTRY }}/${{ github.repository_owner }}/charts/actions-test --version 0.1.0 --namespace cicd --create-namespace --insecure-skip-tls-verify
+          helm upgrade --install actions-test oci://${{ env.REGISTRY }}/${{ github.repository_owner }}/charts/actions-test --version latest --namespace cicd --create-namespace --insecure-skip-tls-verify
 
