--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -42,13 +42,21 @@ jobs:
       - name: Set short GitHub SHA hash
         run: echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
 
+#      - name: Build and push Docker image
+#        uses: docker/build-push-action@v6.10.0
+#        with:
+#          push: true
+#          tags: |
+#            ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest
+#            ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ env.SHORT_SHA }}
+#          labels: ${{ steps.meta.outputs.labels }}
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v6.10.0
         with:
           push: true
           tags: |
-#              ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest
-             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-#              ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ env.SHORT_SHA }}
-             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.SHORT_SHA }}
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.SHORT_SHA }}
           labels: ${{ steps.meta.outputs.labels }}
+
