--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
           password: ${{ secrets.REGISTRY_TOKEN }}
 
       - name: Push chart to registry
-        run: helm push ./actions-test-0.1.0.tgz oci://${{ env.REGISTRY }}/charts
+        run: helm push ./actions-test-0.1.0.tgz oci://${{ env.REGISTRY }}/${{ github.repository_owner }}/charts
 
       # Log in to Azure using OIDC
       - name: Azure Login
