feat: reuse golang build and test

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -7,7 +7,7 @@ on:
     branches: [develop, main]
 
 jobs:
-  call-terraform-security:
+  call-golang-build-test:
     uses: corbencreatives/action-workflows/.github/workflows/golang-build-test.yml@v0.5.4
     permissions:
       contents: read
