--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,47 +1,13 @@
-name: 'Build and test develop'
+name: 'Golang build and test'
 
 on:
   pull_request:
-#    branches: [develop, main]
     types: [opened, reopened]
   merge_group:
     branches: [develop, main]
 
-env:
-  GO_VERSION: 1.23
-  GOLANGCI_LINT_VERSION: v1.63
-
-permissions:
-  contents: read
-  # Optional: allow read access to pull request. Use with `only-new-issues` option.
-  # pull-requests: read
-
 jobs:
-  build-test:
-    if: github.event_name == 'pull_request' # only run job if workflow initiated by a pull request event
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-go@v5
-        with:
-          go-version: ${{ env.GO_VERSION }}
-
-      - name: Build
-        run: go build -v ./...
-
-      - name: Test
-        run: go test -v ./...
-
-  golangci-lint:
-    if: github.event_name == 'pull_request' # only run job if workflow initiated by a pull request event
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-go@v5
-        with:
-          go-version: ${{ env.GO_VERSION }}
-
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v6
-        with:
-          version: ${{ env.GOLANGCI_LINT_VERSION }}
+  call-golang-build-test:
+    uses: corbencreatives/action-workflows/.github/workflows/golang-build-test.yml@v0.5.4
+    permissions:
+      contents: read
